removed pit and failsafe